[metadata]
name = yifanmai-helm-plugins
version = 0.2.3
author = Yifan Mai
author_email = yifan@cs.stanford.edu
description = Sample plugins for CRFM HELM
long_description = Sample plugins for CRFM HELM
keywords = language models benchmarking
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: Apache Software License
url = "https://github.com/yifanmai/helm-plugins"

[options]
python_requires = ~=3.8
package_dir =
    =src
packages = find:
zip_safe = False
include_package_data = True

install_requires=
    crfm-helm

[options.packages.find]
where = src
exclude =
    tests*
